test/fails/bad_generics/add_tag.lgl
tag a is vec3;

`t add<`t : space>(`t a1, `t a2) { return a1 + a2; }

void main() {
    a v1 = [0., 0., 0.];
    a v2 = [1., 1., 1.];
    a v3 = add(v1, v2);
    print v3;
}
